Creating an "API Image"
